// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popconfirm /> Basic usage of Popconfirm 1`] = `
<a
  href="#"
  onBlur={undefined}
  onClick={[Function]}
  onContextMenu={undefined}
  onFocus={undefined}
  onMouseDown={[Function]}
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  onTouchStart={[Function]}
>
  Delete
</a>
`;

exports[`<Popconfirm /> ConditionalTrigger usage of Popconfirm 1`] = `
<div>
  <a
    href="#"
    onBlur={undefined}
    onClick={[Function]}
    onContextMenu={undefined}
    onFocus={undefined}
    onMouseDown={[Function]}
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    onTouchStart={[Function]}
  >
    Delete a task
  </a>
  <br />
  <br />
  Whether directly execute：
  <span
    className="jc-switch jc-switch-checked"
    defaultChecked={true}
    onChange={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseUp={[Function]}
    tabIndex={0}
  >
    <span
      className="jc-switch-inner"
    />
  </span>
</div>
`;

exports[`<Popconfirm /> Locale usage of Popconfirm 1`] = `
<a
  href="#"
  onBlur={undefined}
  onClick={[Function]}
  onContextMenu={undefined}
  onFocus={undefined}
  onMouseDown={[Function]}
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  onTouchStart={[Function]}
>
  Delete
</a>
`;

exports[`<Popconfirm /> Placement usage of Popconfirm 1`] = `
<div
  className="demo"
>
  <div
    style={
      Object {
        "marginLeft": 70,
        "whiteSpace": "nowrap",
      }
    }
  >
    <button
      className="jc-btn"
      onBlur={undefined}
      onClick={[Function]}
      onContextMenu={undefined}
      onFocus={undefined}
      onMouseDown={[Function]}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onTouchStart={[Function]}
      type="button"
    >
      <span>
        TL
      </span>
    </button>
    <button
      className="jc-btn"
      onBlur={undefined}
      onClick={[Function]}
      onContextMenu={undefined}
      onFocus={undefined}
      onMouseDown={[Function]}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onTouchStart={[Function]}
      type="button"
    >
      <span>
        Top
      </span>
    </button>
    <button
      className="jc-btn"
      onBlur={undefined}
      onClick={[Function]}
      onContextMenu={undefined}
      onFocus={undefined}
      onMouseDown={[Function]}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onTouchStart={[Function]}
      type="button"
    >
      <span>
        TR
      </span>
    </button>
  </div>
  <div
    style={
      Object {
        "float": "left",
        "width": 70,
      }
    }
  >
    <button
      className="jc-btn"
      onBlur={undefined}
      onClick={[Function]}
      onContextMenu={undefined}
      onFocus={undefined}
      onMouseDown={[Function]}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onTouchStart={[Function]}
      type="button"
    >
      <span>
        LT
      </span>
    </button>
    <button
      className="jc-btn"
      onBlur={undefined}
      onClick={[Function]}
      onContextMenu={undefined}
      onFocus={undefined}
      onMouseDown={[Function]}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onTouchStart={[Function]}
      type="button"
    >
      <span>
        Left
      </span>
    </button>
    <button
      className="jc-btn"
      onBlur={undefined}
      onClick={[Function]}
      onContextMenu={undefined}
      onFocus={undefined}
      onMouseDown={[Function]}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onTouchStart={[Function]}
      type="button"
    >
      <span>
        LB
      </span>
    </button>
  </div>
  <div
    style={
      Object {
        "marginLeft": 304,
        "width": 70,
      }
    }
  >
    <button
      className="jc-btn"
      onBlur={undefined}
      onClick={[Function]}
      onContextMenu={undefined}
      onFocus={undefined}
      onMouseDown={[Function]}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onTouchStart={[Function]}
      type="button"
    >
      <span>
        RT
      </span>
    </button>
    <button
      className="jc-btn"
      onBlur={undefined}
      onClick={[Function]}
      onContextMenu={undefined}
      onFocus={undefined}
      onMouseDown={[Function]}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onTouchStart={[Function]}
      type="button"
    >
      <span>
        Right
      </span>
    </button>
    <button
      className="jc-btn"
      onBlur={undefined}
      onClick={[Function]}
      onContextMenu={undefined}
      onFocus={undefined}
      onMouseDown={[Function]}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onTouchStart={[Function]}
      type="button"
    >
      <span>
        RB
      </span>
    </button>
  </div>
  <div
    style={
      Object {
        "clear": "both",
        "marginLeft": 70,
        "whiteSpace": "nowrap",
      }
    }
  >
    <button
      className="jc-btn"
      onBlur={undefined}
      onClick={[Function]}
      onContextMenu={undefined}
      onFocus={undefined}
      onMouseDown={[Function]}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onTouchStart={[Function]}
      type="button"
    >
      <span>
        BL
      </span>
    </button>
    <button
      className="jc-btn"
      onBlur={undefined}
      onClick={[Function]}
      onContextMenu={undefined}
      onFocus={undefined}
      onMouseDown={[Function]}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onTouchStart={[Function]}
      type="button"
    >
      <span>
        Bottom
      </span>
    </button>
    <button
      className="jc-btn"
      onBlur={undefined}
      onClick={[Function]}
      onContextMenu={undefined}
      onFocus={undefined}
      onMouseDown={[Function]}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      onTouchStart={[Function]}
      type="button"
    >
      <span>
        BR
      </span>
    </button>
  </div>
</div>
`;
